2012-02-06  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Make sure html_dir exists before calling gtkdoc-rebase
        https://bugs.webkit.org/show_bug.cgi?id=77869

        Reviewed by Philippe Normand.

        * gtk/gtkdoc.py:
        (GTKDoc.rebase_installed_docs): Check html_dir exists.

2012-02-03  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Don't version QtWebKit.experimental.
        https://bugs.webkit.org/show_bug.cgi?id=77739

        Reviewed by Tor Arne Vestbø.

        * MiniBrowser/qt/qml/BrowserWindow.qml:

2012-02-06  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix several gtkdoc-fixxref warnings
        https://bugs.webkit.org/show_bug.cgi?id=77613

        Reviewed by Martin Robinson.

        * gtk/generate-gtkdoc:
        (get_webkit1_options): Add webkitspellcheckerenchant.* to the list
        of ignored files, since it's private.
        * gtk/gtkdoc.py:
        (GTKDoc._ignored_files_basenames): Helper function that returns a
        string with the list of ignored files basenames separated by a
        spaces, as expected by several gtkdoc commands.
        (GTKDoc._run_gtkdoc_scan): Use _ignored_files_basenames for
        --ignore-headers option.
        (GTKDoc._run_gtkdoc_mkdb): Use _ignored_files_basenames for
        --ignore-files option.

2012-02-06  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix xrefs after installing API documentation
        https://bugs.webkit.org/show_bug.cgi?id=77551

        Reviewed by Martin Robinson.

        * GNUmakefile.am: Call generate-gtkdoc --rebase after installing
        api docs.
        * gtk/common.py:
        (prefix_of_pkg_config_file): Get the prefix variable of the given
        pkg-config file.
        (gtk_version_of_pkg_config_file): Get the gtk version required by
        the given pkg-config file.
        * gtk/generate-gtkdoc: Add --rebase command line option to rebase
        installed documentation.